# fronius_tdc

./: .devcontainer.json  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  hacs.json  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test-requirements.txt
.github/prompts/: plan-batteriesCoordinator.prompt.md  plan-customCard.prompt.md  plan-fullTDCediting.prompt.md
.github/workflows/: lint.yml  release.yml  tests.yml  validate.yml
config/: configuration.yaml
custom_components/fronius_tdc/: __init__.py  api.py  auth.py  batteries_coordinator.py  config_flow.py  const.py  manifest.json  number.py  select.py  services.yaml  switch.py  tdc_coordinator.py  time.py
custom_components/fronius_tdc/translations/: en.json
scripts/: setup  test
tests/: README.md  __init__.py  conftest.py  test_api.py  test_auth.py  test_batteries_coordinator.py  test_battery_entities.py  test_config_flow.py  test_const.py  test_coordinator.py  test_init.py  test_number.py  test_schedule_entities.py  test_select.py  test_switch.py  test_tdc_coordinator.py  test_time.py  test_time_entities.py
tests/data/: timeofuse.json
